
20121021:
! fixed handle leak in "share small files first" - thx to RejZoR [WiZaRd]
! fixed MM issue that could sometimes crash kMule [WiZaRd]
~ changed MM animation to "blend" [WiZaRd]
- removed obsolete filedonkey search method [WiZaRd]
+ "customSearches" [WiZaRd]
 * you can now customize additional web search methods via editing the customSearches.dat in your config dir
 * see the abovementioned file for details and examples
+ ZZ (focused!) upload system [WiZaRd - original by ZZ]
+ improved lowID fairness [WiZaRd - by VQB]
+ Upload feedback [WiZaRd]

20130112:
! fixed possible crash when loading a new ipfilter while kMule was already running - thx to SS1900 [WiZaRd]
! fixed a minimule crash under Wine - thx to ]Axl[ [WiZaRd]
~ don't check for "already in use" ports when updating or UPnP has been disabled [WiZaRd]

20130224:
~ for bettter understanding, we changed "low id" to "firewalled" and "high id" to "open" [WiZaRd]
+ added button to proxy dialog to retrieve the OS proxy settings [WiZaRd]
! WINE compatibility [WiZaRd] - see bewlow!
 * using kMule under WINE would work because newer WINE releases include a "fake" wmvcore.dll file which crashes kMule
 * kMule will now try to detect WINE and skip the guilty code parts automatically
 * if the detection fails OR if you installed a proper wmvcore.dll file and want to use it, you can add a "WineCompatibility=0/1" entry in the kMule.ini file
+ added button to edit kMule.ini to extended options page [WiZaRd]
~ changed splashscreen to splashscreenex [WiZaRd - original by TBH]
~ added ipfilter progress to splash [WiZaRd - original by JvA (X-Ray)]
+ added option to automatically extract supported archive files [Tuxman/WiZaRd]
~ unified messages & security tabs in options [WiZaRd]
~ removed shared dirs from options [WiZaRd]
 * using the shared files tab offers way more functionality!
~ added "titanmule" to GPL breakers string list [WiZaRd]

XXXXYYZZ:
> updated miniupnplib support to v1.8 (11/02/2013) [Tuxman/WiZaRd]